--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                             Контакты
                         </a>
                     </li>
+                    <li>
+                        <a href="" class="nav__list-link">
+                            Мы на карте
+                        </a>
+                    </li>
 
                 </ul>
 
